# miniscript

./: .gitignore  CMakeLists.txt  FUNDING.yml  LICENSE  MiniScript-Release-Notes.txt  QuickRef.md  README.md  TestSuite.txt
.github/workflows/: cs-build-project.yml  linux-cpp.yml  macos-cpp.yml  publish-package.yml  windows-cpp.yml
ImportTest/: importme.ms  importreturns.ms
ImportTest/2/: importme.ms
ImportTest/test/: nested.ms
MiniScript-cpp/: CMakeLists.txt  Makefile  README-UDS.md  README-key.md  README.md  rdTest.ms  test.ms  testUds.ms
MiniScript-cpp/MiniScript.xcodeproj/: project.pbxproj
MiniScript-cpp/MiniScript.xcodeproj/editline/: complete.c  editline.c  editline.h  editline_internal.h
MiniScript-cpp/MiniScript.xcodeproj/project.xcworkspace/xcshareddata/: MiniScript.xcscmblueprint
MiniScript-cpp/MiniScript.xcodeproj/project.xcworkspace/xcuserdata/jstrout.xcuserdatad/: UserInterfaceState.xcuserstate
MiniScript-cpp/MiniScript.xcodeproj/project.xcworkspace/xcuserdata/jstrout.xcuserdatad/xcdebugger/: Expressions.xcexplist
MiniScript-cpp/MiniScript.xcodeproj/xcshareddata/xcschemes/: MiniScript File Input.xcscheme
MiniScript-cpp/MiniScript.xcodeproj/xcuserdata/jstrout.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MiniScript-cpp/MiniScript.xcodeproj/xcuserdata/jstrout.xcuserdatad/xcschemes/: Integration Tests.xcscheme  MiniScript.xcscheme  Profile.xcscheme  xcschememanagement.plist
MiniScript-cpp/demo/: acey-deucey.ms  countdown.ms  dogYears.ms  superstartrek.ms  tetris.ms  textAdventure.ms  therapist.ms
MiniScript-cpp/lib/: dateTime.ms  grfon.ms  importUtil.ms  json.ms  listUtil.ms  mapUtil.ms  mathUtil.ms  matrixUtil.ms  qa.ms  stringUtil.ms  tsv.ms  vt.ms
MiniScript-cpp/src/: DateTimeUtils.cpp  DateTimeUtils.h  Key.cpp  Key.h  OstreamSupport.cpp  OstreamSupport.h  ShellExec.cpp  ShellExec.h  ShellIntrinsics.cpp  ShellIntrinsics.h  main.cpp
MiniScript-cpp/src/MiniScript/: Dictionary.cpp  Dictionary.h  List.cpp  List.h  MiniscriptErrors.h  MiniscriptInterpreter.cpp  MiniscriptInterpreter.h  MiniscriptIntrinsics.cpp  MiniscriptIntrinsics.h  MiniscriptKeywords.cpp  MiniscriptKeywords.h  MiniscriptLexer.cpp  MiniscriptLexer.h  MiniscriptParser.cpp  MiniscriptParser.h  MiniscriptTAC.cpp  MiniscriptTAC.h  MiniscriptTypes.cpp  MiniscriptTypes.h  QA.cpp  QA.h  RefCountedStorage.h  SimpleString.cpp  SimpleString.h  SimpleVector.cpp  SimpleVector.h  SplitJoin.cpp  SplitJoin.h  String.cpp  String.h  UnicodeUtil.cpp  UnicodeUtil.h  UnitTest.cpp  UnitTest.h
MiniScript-cpp/src/editline/: README.md  complete.c  config.h  editline.c  editline_internal.h  sysos9.c  sysunix.c
MiniScript-cpp/src/whereami/: SOURCE.txt
MiniScript-cpp/tests/: testDateTimeDateStr.ms  testDaylight.ms  testFileName.ms  testFileReadLines.ms
MiniScript-cs/: Miniscript.csproj  Miniscript.sln  Miniscript.userprefs  MiniscriptErrors.cs  MiniscriptInterpreter.cs  MiniscriptIntrinsics.cs  MiniscriptLexer.cs  MiniscriptParser.cs  MiniscriptTAC.cs  MiniscriptTypes.cs  Program.cs
MiniScript-cs/Helpers/: FileHelper.cs
MiniScript-cs/Properties/: AssemblyInfo.cs
